--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: AppTracking_permission_example
-description: Demonstrates how to use the AppTracking_permission plugin.
+name: flutter_ios_app_tracking_permission_example
+description: Demonstrates how to use the flutter_ios_app_tracking_permission plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -12,9 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  AppTracking_permission:
+  flutter_ios_app_tracking_permission:
     # When depending on this package from a real application you should use:
-    #   AppTracking_permission: ^x.y.z
+    #   flutter_ios_app_tracking_permission: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
